fixing spacing on column layout

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -11,7 +11,7 @@
   height: $screen-height;
   width: $screen-width;
   max-width: unset;
-  padding: 3rem 15rem 3rem 3rem;
+  padding: 3rem 32rem 3rem 3rem;
   opacity: 0.9;
 
   .pillbox {
